<resources>
    <string name="app_name">Anúnciate</string>
    <string name="Titulo">Anúnciate</string>
    <string name="Subtitulo">la app de oferta y demanda de tareas</string>
    <string name="introusername">Indroduzca su usuario</string>
    <string name="intropassword">Introduzca su contraseña</string>
    <string name="iniciosecion">Iniciar sesión</string>
    <string name="registro">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="texto1">Únete y empieza a demandar y ofrecer trabajo</string>
    <string name="repitapassword">Repita su contraseña</string>
    <string name="introemail">Introduzca su email</string>
    <string name="nombreapellido">Introduzca su nombre completo</string>
    <string name="fechanacimiento">Introduzca su fecha de nacimiento</string>
    <string name="introtelefono">Introduzca su teléfono de contacto</string>
    <string name="introciudad">Introduzca su ciudad</string>
    <string name="publicarAnuncio">Publicar Anuncio</string>
    <string name="filtro">Aplicar filtro</string>
    <string name="salir">Salir</string>
    <string name="publicar_anuncio">Publicar Anuncio</string>
    <string name="buscar">Aplicar filtro</string>
    <string name="perfil">Perfil</string>
    <string name="text2">¿Con qué necesitas ayuda?</string>
    <string name="publicar">Publicar</string>
    <string name="detalles">Detalles</string>
    <string name="textmenu">Encuentra de una forma sencilla y rápida  a quién puedas ayudar ¡Y gana dinero a cambio de ello!</string>
    <string name="informacion_personal">Informacion personal</string>
    <string name="medio_de_contacto">Medio de contacto</string>
    <string name="nombre_y_apellido">Nombre y apellido</string>
    <string name="perfiltelefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="contra">Contraseña</string>
    <string name="opiniones">Opiniones de otros usuarios</string>
    <string name="mis_anuncios">Mis anuncios</string>
    <string name="actualizar">Actualizar</string>
    <string name="saliritem">Salir</string>
    <string name="realizadoUsuario">Introduzca el nombre del usuario</string>
    <string name="tarea_realizada">Tarea Realizada</string>
    <string name="comentar">Deja un comentario sobre tu experiencia</string>
    <string name="opinar">Opinar</string>
</resources>
