<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context="com.example.jhonatan.anunciate.Registro">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"

        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        android:id="@+id/linearLayout2">

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BotonColores"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/registro" />

        <Button
            android:id="@+id/cancelar"
            android:layout_marginLeft="10dp"
            android:theme="@style/BotonColores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />

    </LinearLayout>

    <TextView

        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.55"
        android:text="@string/texto1"
        android:textColor="@color/colorLetrasTitulos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:weightSum="1"
        app:layout_constraintVertical_bias="1.0"
        android:id="@+id/linearLayout4">




        <EditText
            android:id="@+id/usuariousername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorLetras"
            android:textColorHint="@color/colorLetras"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/introusername"
            android:inputType="textPersonName" />

        <EditText
            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/usuariopassword"
            android:textColor="@color/colorLetras"
            android:textColorHint="@color/colorLetras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/intropassword"
             />

        <EditText
            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/usuariopasswordrep"
            android:layout_width="match_parent"
            android:textColorHint="@color/colorLetras"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetras"
            android:ems="10"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:hint="@string/repitapassword" />

        <EditText
            android:id="@+id/usuarioemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorLetras"
            android:textColorHint="@color/colorLetras"
            android:drawableLeft="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/introemail"
            android:inputType="textPersonName" />

        <EditText
            android:drawableLeft="@drawable/ic_nombre"
            android:id="@+id/usuarionombreapellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorLetras"
            android:textColorHint="@color/colorLetras"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPersonName"
            android:hint="@string/nombreapellido" />

        <EditText
            android:drawableLeft="@drawable/ic_telefono"
            android:id="@+id/usuariotelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/colorLetras"
            android:textColor="@color/colorLetras"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPersonName"
            android:hint="@string/introtelefono" />
        <EditText
            android:drawableLeft="@drawable/ic_ciudad"
            android:id="@+id/usuariociudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorLetras"
            android:textColorHint="@color/colorLetras"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"

            android:inputType="textPersonName"
            android:hint="@string/introciudad" />
    </LinearLayout>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
