<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLetras"
    tools:context="com.example.jhonatan.anunciate.PerfilUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        android:id="@+id/linearLayout2">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbperfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:gravity="bottom"
            android:minHeight="?attr/actionBarSize"
            android:paddingTop="20dp"
            android:theme="@style/AppTheme.AppBarOverLay"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/Titulo"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo"
                    android:textColor="@color/colorLetras"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SubTitulo"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Subtitulo"
                    android:textColor="@color/fondo"
                    android:textStyle="italic" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informacion_personal"
        android:background="@color/colorfecha"
        android:textColor="@color/letraperfil"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_y_apellido"
        android:padding="5dp"
        android:textStyle="italic"
        android:textSize="14sp"
        android:textColor="@color/letraperfil"
        android:layout_marginLeft="15dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"

        android:layout_alignRight="@+id/perfilnombre"
        android:layout_alignEnd="@+id/perfilnombre" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:id="@+id/perfilnombre" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ciudad"
        android:textColor="@color/letraperfil"
        android:padding="5dp"
        android:textStyle="italic"
        android:textSize="14sp"
        android:id="@+id/textView6"
        android:layout_below="@+id/perfilnombre"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignRight="@+id/perfilnombre"
        android:layout_alignEnd="@+id/perfilnombre" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/perfilciudad" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textvie7"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorfecha"
        android:textColor="@color/letraperfil"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/medio_de_contacto"
        android:layout_below="@+id/perfilciudad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textvie7"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:padding="5dp"
        android:textStyle="italic"
        android:textSize="14sp"
        android:textColor="@color/letraperfil"
        android:layout_alignRight="@+id/perfilciudad"
        android:text="@string/perfiltelefono"
        android:layout_alignEnd="@+id/perfilciudad"
        android:id="@+id/textView7" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/perfilciudad"
        android:layout_alignStart="@+id/perfilciudad"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:id="@+id/perfiltelefono" />
    <TextView
        android:padding="5dp"
        android:textColor="@color/letraperfil"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textStyle="italic"
        android:textSize="14sp"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignRight="@+id/perfiltelefono"
        android:layout_alignEnd="@+id/perfiltelefono" />


    <EditText
        android:id="@+id/perfilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/perfiltelefono"
        android:layout_alignStart="@+id/perfiltelefono"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorfecha"
        android:textColor="@color/letraperfil"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:text="Acerca de la cuenta"
        android:textSize="17sp"
        android:textStyle="bold"
        android:id="@+id/editText3"
        android:layout_below="@+id/perfiltelefono"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:padding="5dp"
        android:textColor="@color/letraperfil"
        android:text="@string/contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/perfilEmail"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignRight="@+id/perfilEmail"
        android:layout_alignEnd="@+id/perfilEmail"
        android:textStyle="italic"
        android:textSize="14sp"
        android:id="@+id/textView9" />

    <EditText
        android:id="@+id/perfilcontra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView9"
        android:layout_alignLeft="@+id/perfilEmail"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignStart="@+id/perfilEmail"
        android:layout_below="@+id/textView9" />



</RelativeLayout>
